make responsive and fix redundancy

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main>
       <h1>North Brooklyn Codes</h1>
       <p>
-        We are a local community of developers, data scientists, and students
-        local to Greenpoint and Williamsburg. Come join our
+        We are a community of developers, data scientists, and students local to
+        Greenpoint and Williamsburg. Come join our
         <a href="https://discord.gg/ZvPkNVwMXQ">Discord Server</a>
         to chat with members and keep up to date on local events.
       </p>
