--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       href="https://fonts.googleapis.com/css?family=Cabin"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
     <main>
