some organization changes to make building easier

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Cabin"
     />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="/src/style.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <script src="./index.js" defer></script>
+    <script src="/src/main.js" defer type="module"></script>
   </head>
   <body>
     <main>
